--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 baseurl:
-title: Tufte-Jekyll
+title: Guillaume Ansanay-Alex
 subtitle: Content-centric blogging
-author: clay harmon
+author: Guillaume Ansanay-Alex
 simple_search: http://google.com/search
 description: A Jekyll theme for content-rich sites
 name: tufte
@@ -17,11 +17,6 @@ post:
 page:
   template: _page.txt
   extension: md
-editor: gvim
 git:
   branch: master
-transfer:
-  command: rsync
-  settings: -av
-  source: _site/
-  destination: ~/Git/clayh53.github.com/
+
