--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,14 +1,14 @@
-- link: //www.twitter.com/twitter_handle 
+- link: //www.twitter.com/gansanay 
   icon: icon-twitter
-- link: //plus.google.com/+googlePlusName 
-  icon: icon-google2
-- link: //github.com/GithubHandle 
+#- link: //plus.google.com/+googlePlusName 
+#  icon: icon-google2
+- link: //github.com/gansanay 
   icon: icon-github
-- link: //www.flickr.com/photos/FlickrUserID 
-  icon: icon-flickr3
+#- link: //www.flickr.com/photos/FlickrUserID 
+#  icon: icon-flickr3
 - link: /feed 
   icon: icon-rss2
-- link: //vimeo.com/vimeo-id
-  icon: icon-vimeo2
-- link: //www.linkedin.com/
+#- link: //vimeo.com/vimeo-id
+#  icon: icon-vimeo2
+- link: //www.linkedin.com/in/gansanay/
   icon: icon-linkedin
